syntax = "proto3";
option java_multiple_files = true;
package peakwork.api.accommodation.v1;
option java_package = "com.peakwork.api.accommodation.v1.common";

// Represents a DRV GlobalType. A DRV GlobalType is a code, that identifies a touristic aspect of an entity like an
// accommodation or a room. For example a DRV GlobalType for a room could identify the room as a room with sea view.
// See the official DRV GlobalType documentation for further details.
message GlobalType {
  // mandatory - Global-Type part of the DRV GlobalType.
  string GT = 1;
  // optional - Sub-Type part of the DRV GlobalType.
  string ST = 2;
  // optional - Additional-Type part of the DRV GlobalType.
  string AT = 3;
  // optional - Custom-Type part of the DRV GlobalType.
  string CT = 4;
}
